// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`currentPathName changes, but pathname stays the same (only query changes) 1`] = `
Object {
  "location": Object {
    "basename": "",
    "entries": Array [
      Object {
        "hash": "",
        "key": "345678",
        "pathname": "/third",
        "search": "",
        "state": Object {},
        "url": "/third",
      },
      Object {
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "?foo=bar&baz=69",
        "state": Object {},
        "url": "/first?foo=bar&baz=69",
      },
      Object {
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "?foo=car&baz=70",
        "state": Object {},
        "url": "/first?foo=car&baz=70",
      },
    ],
    "hasSSR": undefined,
    "index": 2,
    "kind": "push",
    "length": 3,
    "pathname": "/first",
    "payload": Object {},
    "prev": Object {
      "index": 1,
      "kind": "push",
      "length": 2,
      "pathname": "/first",
      "payload": Object {},
      "query": Object {
        "baz": "69",
        "foo": "bar",
      },
      "type": "FIRST",
    },
    "query": Object {
      "baz": "70",
      "foo": "car",
    },
    "search": "foo=car&baz=70",
    "type": "FIRST",
    "url": "/first?foo=car&baz=70",
  },
  "title": "FIRST",
}
`;

exports[`dispatched as action.payload.query 1`] = `
Object {
  "location": Object {
    "basename": "",
    "entries": Array [
      Object {
        "hash": "",
        "key": "345678",
        "pathname": "/third",
        "search": "",
        "state": Object {},
        "url": "/third",
      },
      Object {
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
    ],
    "hasSSR": undefined,
    "index": 0,
    "kind": "back",
    "length": 2,
    "pathname": "/third",
    "payload": Object {},
    "prev": Object {
      "index": 1,
      "kind": "push",
      "length": 2,
      "pathname": "/first",
      "payload": Object {},
      "type": "FIRST",
    },
    "type": "THIRD",
    "url": "/third",
  },
  "title": "THIRD",
}
`;

exports[`generated from pathToAction within <Link /> 1`] = `
Object {
  "location": Object {
    "basename": "",
    "entries": Array [
      Object {
        "hash": "",
        "key": "345678",
        "pathname": "/third",
        "search": "",
        "state": Object {},
        "url": "/third",
      },
      Object {
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "?baz=69&foo=bar",
        "state": Object {},
        "url": "/first?baz=69&foo=bar",
      },
      Object {
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "?baz=70&foo=car",
        "state": Object {},
        "url": "/first?baz=70&foo=car",
      },
    ],
    "hasSSR": undefined,
    "index": 2,
    "kind": "push",
    "length": 3,
    "pathname": "/first",
    "payload": Object {},
    "prev": Object {
      "index": 1,
      "kind": "push",
      "length": 2,
      "pathname": "/first",
      "payload": Object {},
      "query": Object {
        "baz": "69",
        "foo": "bar",
      },
      "type": "FIRST",
    },
    "query": Object {
      "baz": "70",
      "foo": "car",
    },
    "search": "baz=70&foo=car",
    "type": "FIRST",
    "url": "/first?baz=70&foo=car",
  },
  "title": "FIRST",
}
`;

exports[`history.push("/path?search=foo") 1`] = `
Object {
  "location": Object {
    "basename": "",
    "entries": Array [
      Object {
        "hash": "",
        "key": "345678",
        "pathname": "/third",
        "search": "",
        "state": Object {},
        "url": "/third",
      },
      Object {
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "?foo=bar&baz=69",
        "state": Object {},
        "url": "/first?foo=bar&baz=69",
      },
      Object {
        "hash": "",
        "key": "345678",
        "pathname": "/third",
        "search": "?foo=bar&baz=69",
        "state": Object {},
        "url": "/third?foo=bar&baz=69",
      },
    ],
    "hasSSR": undefined,
    "index": 2,
    "kind": "push",
    "length": 3,
    "pathname": "/third",
    "payload": Object {},
    "prev": Object {
      "index": 1,
      "kind": "push",
      "length": 2,
      "pathname": "/first",
      "payload": Object {},
      "query": Object {
        "baz": "69",
        "foo": "bar",
      },
      "type": "FIRST",
    },
    "query": Object {
      "baz": "69",
      "foo": "bar",
    },
    "search": "foo=bar&baz=69",
    "type": "THIRD",
    "url": "/third?foo=bar&baz=69",
  },
  "title": "THIRD",
}
`;
